kubernetes/front-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-service
  namespace: inventory-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      labels:
        app: front-service
    spec:
      containers:
        - name: front-service
          image: raygunito/front-service:latest
          ports:
            - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: inventory-system
spec:
  selector:
    app: front-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
  type: ClusterIP
